[Gepardec/mega#647] - error component fix height auto, damit icon den nötigen platz auch einnimmt. mat-icon hatte in der alten version overflow x & y auf visible, daher konnte man das icon sehen. jetzt ist es hidden, daher muss das icon die richtige height haben. spacer & gap sind nicht mehr nötig

--- a/src/app/modules/shared/components/error/error.component.scss
+++ b/src/app/modules/shared/components/error/error.component.scss
@@ -1,6 +1,7 @@
 mat-icon {
   font-size: 80px;
   width: auto;
+  height: auto;
 }
 
 .error_container {
@@ -10,9 +11,4 @@ mat-icon {
   box-sizing: border-box;
   place-content: center;
   align-items: center;
-  gap: 10px;
-}
-
-.spacer {
-  height: 40px;
 }
